<resources>
    <string name="app_name">K-means Client</string>
    <string name="ip">Indirizzo IP/DNS</string>
    <string name="port">Porta</string>
    <string name="conn">CONNETTI</string>
    <string name="server_conn">Connessione al server</string>
    <string name="server_change">CAMBIA SERVER</string>
    <string name="desc_logo_login">Logo dell\'applicazione</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>>
    <string name="home_fragment">Home</string>
    <string name="add_fragment">Add</string>
    <string name="load_fragment">Load</string>
    <string name="change_server_fragment">Change Server</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cambia_server">Cambia Server</string>
    <string name="carica">Carica</string>
    <string name="nuovo">Nuovo</string>
    <string name="attendere_prego">Attendere prego...</string>
    <string name="seleziona">Seleziona</string>
    <string name="cerca">Cerca...</string>
    <string name="dati_db">Inserisci i dati per la connessione al database</string>
    <string name="server">Server</string>
    <string name="porta">Porta</string>
    <string name="database">Database</string>
    <string name="tabella">Tabella</string>
    <string name="utente">Utente</string>
    <string name="password">Password</string>
    <string name="usa_predefiniti">USA VALORI PREDEFINITI</string>
    <string name="resetta_valori">RESETTA VALORI</string>
    <string name="seleziona_num_cluster">SELEZIONA IL NUMERO DI CLUSTER</string>
    <string name="calcola">CALCOLA</string>
    <string name="info_server">INSERISCI LE INFORMAZIONI DEL SERVER</string>
    <string name="seleziona_file">SELEZIONA UN FILE</string>
    <string name="recupera_file">RECUPERA FILE</string>
    <string name="db_hint">MapDB</string>
    <string name="tabella_hint">playtennis</string>
    <string name="utente_hint">MapUser</string>
    <string name="password_hint">map</string>
    <string name="porta_hint">3306</string>
    <string name="server_hint">localhost</string>
    <string name="errore">Errore</string>
    <string name="inserire_tutti_i_campi">Inserire tutti i campi!</string>
    <string name="tentativo_di_connessione">Tentativo di connessione</string>
    <string name="connessione_riuscita">Connessione riuscita!</string>
    <string name="calcolo_in_corso">Calcolo in corso</string>
    <string name="risultati_arrivati_correttamente">Risultati arrivati correttamente!</string>
    <string name="connessione_non_riuscita">Connessione non riuscita</string>
    <string name="tempo_scaduto">Tempo scaduto.</string>
    <string name="ok">OK</string>
    <string name="server_cambiato_correttamente">Server cambiato correttamente</string>

</resources>
